tests/snapshots/cmd_generate_permissions__permissions_scoped.snap
---
source: tests/cmd_generate_permissions.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  permissions: {
    contents: "write",
    pull_requests: "read",
    packages: "none",
    id_token: "write",
  },
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() { run("echo hello") }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
permissions:
  contents: write
  pull-requests: read
  packages: none
  id-token: write
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo hello
